[tool.poetry]
name = "goldiprox-hydra"
version = "0.1.0"
description = ""
authors = ["Mrinank Sharma <mrinank.sharma.97+dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
hydra-optuna-sweeper = "^1.1.1"
wandb = "^0.12.1"
hydra-core = "^1.1.1"
torchvision = "^0.10.0"
seaborn = "^0.11.2"
torch = "^1.9.0"
scikit-learn = "^0.24.2"
jupyterlab = "^3.1.12"
sh = "^1.14.2"
isort = "^5.9.3"
pudb = "^2021.1"
pytest = "^6.2.5"
black = "^21.9b0"
pytorch-lightning = "^1.4.6"
hydra-colorlog = "^1.1.0"
python-dotenv = "^0.19.0"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
rich = "^10.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
